# lockr

./: .gitignore  .goreleaser.yml  CLAUDE.md  LICENSE  MULTI_LANGUAGE_STRATEGY.md  NEXT_STEPS.md  README.md  REQUIREMENTS.md  sandbox_vault.db  vault.lockr
.github/workflows/: release.yml
docs/: HOMEBREW_DISTRIBUTION.md
go/: GO_IMPLEMENTATION.md  Makefile  README.md  go.mod  go.sum
go/cmd/lockr/: main.go
go/docs/: KEYRING.md
go/internal/cli/: commands.go  keyring.go  root.go
go/internal/clipboard/: manager.go
go/internal/crypto/: masterkey.go  masterkey_test.go
go/internal/database/: errors.go  manager.go  manager_test.go  types.go
go/internal/keyring/: errors.go  manager.go  manager_test.go
go/internal/search/: fuzzy.go  fuzzy_test.go  interactive.go
go/internal/session/: manager.go
python/: .coverage  LICENSE  MANIFEST.in  PYTHON_IMPLEMENTATION.md  README.md  create_sandbox.py  demo_1000_entries.py  demo_features.py  pyproject.toml  quick_nav_test.py  sandbox_vault.db  test_fuzzy.py  test_interactive_get.py  vault.lockr
python/lockr/: __init__.py  __main__.py  exceptions.py  keychain.py
python/lockr/database/: manager.py
python/lockr/search/: fuzzy.py  interactive.py  realtime.py
python/lockr/session/: __init__.py  manager.py
python/lockr/utils/: password_generator.py  validation.py
python/scripts/: build.sh  test-install.sh
python/tests/: test_basic.py  test_clipboard_integration.py  test_interactive.py  test_password_generation.py  test_sandbox.py  test_sessions.py
schema/: vault.sql
tests/compatibility/: README.md
