[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lockr"
version = "1.0.0"
description = "Personal vault CLI for secure storage and retrieval of secrets with interactive fuzzy search"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Lockr Team", email = "team@lockr.dev"}
]
maintainers = [
    {name = "Lockr Team", email = "team@lockr.dev"}
]
keywords = ["password", "vault", "secrets", "cli", "security", "encryption", "fuzzy-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "sqlcipher3-wheels>=0.5.4",
    "click>=8.1.0",
    "prompt-toolkit>=3.0.36",
    "pyperclip>=1.8.2",
]

[project.urls]
Homepage = "https://github.com/lockr-dev/lockr"
Documentation = "https://docs.lockr.dev"
Repository = "https://github.com/lockr-dev/lockr.git"
Issues = "https://github.com/lockr-dev/lockr/issues"
Changelog = "https://github.com/lockr-dev/lockr/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.0.0",
    "types-click>=7.1.0",
    "types-pyperclip>=1.8.0",
]

[project.scripts]
lockr = "lockr.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lockr*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=lockr --cov-report=term-missing"

[tool.coverage.run]
source = ["lockr"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "twine>=6.2.0",
    "types-click>=7.1.8",
]
