[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lockr"
version = "1.0.0"
description = "Personal vault CLI for secure storage and retrieval of secrets with interactive fuzzy search"
requires-python = ">=3.12"
dependencies = [
    "sqlcipher3-wheels>=0.5.4",
    "click>=8.1.0",
    "prompt-toolkit>=3.0.36",
    "pyperclip>=1.8.2",
    "keyring>=25.6.0",
]

[project.scripts]
lockr = "lockr.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lockr*"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "types-click>=7.1.8",
    "types-pyperclip>=1.9.0.20250801",
]